updates inscription page contrast issue.

--- a/usep_app/static/usep/css/inscription.css
+++ b/usep_app/static/usep/css/inscription.css
@@ -31,7 +31,7 @@ div p a {
  
  #translation h2, #commentary h2 {
     font-size:1.2em;
-	color:#4b7975;
+	color:#3f6662;
 	text-transform:uppercase;
 	font-family:georgia,palatino,serif;
 	font-weight:normal;
